--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -18,12 +18,13 @@
 
     <TextView
         android:id="@+id/tvScreenName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="-5dp"
         app:layout_constraintLeft_toRightOf="@+id/ivProfileImage"
         app:layout_constraintTop_toTopOf="@id/ivProfileImage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
         android:text="UserName"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -31,11 +32,13 @@
 
     <TextView
         android:id="@+id/tvBody"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         app:layout_constraintLeft_toLeftOf="@+id/tvScreenName"
         app:layout_constraintTop_toBottomOf="@+id/tvScreenName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tvScreenName"
         android:text="Tweet Body"
         android:textColor="@android:color/black"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
